Fix DOX-194
Squashed commit of the following:

commit 20db3678b17a6b787a0d7ef7bb1ebf5990125f78
Author: Lili Du <lilidu@Lilis-MacBook-Pro.local>
Date:   Wed Jun 20 16:27:24 2018 +0200

    DOX-194 Updating device view after delete

commit 0f7db645a7ef072d4655d7a192c7876021ae27fa
Author: Lili Du <lilidu@Lilis-MacBook-Pro.local>
Date:   Wed Jun 20 16:16:40 2018 +0200

    DOX-194 Editing device name is now working

commit 930a546909981e237448396c683259597d177a9d
Author: David Skeppstedt <david.skeppstedt@gmail.com>
Date:   Wed Jun 20 15:49:31 2018 +0200

    Fix typo name -> deviceName

commit f4818ca3bfc2e4592afe9fbe580fa4f270761569
Author: David Skeppstedt <david.skeppstedt@gmail.com>
Date:   Wed Jun 20 15:41:25 2018 +0200

    Add route that updates name of device

commit ba5975dfcc0cd9b47b9371f95a2db56612eff0b0
Author: Lili Du <lilidu@Lilis-MacBook-Pro.local>
Date:   Wed Jun 20 15:33:32 2018 +0200

    DOX-194 Added route to server to update device name

commit 7cb3ca469218f8fa5e7403ed7f075661e941c9ae
Author: David Skeppstedt <david.skeppstedt@gmail.com>
Date:   Wed Jun 20 15:26:54 2018 +0200

    Add cleanup job of inactive devices

commit afdd4e7b503289a193ce75f7a29d11c8ec01dd8c
Author: David Skeppstedt <david.skeppstedt@gmail.com>
Date:   Wed Jun 20 15:26:37 2018 +0200

    Fix activate device on confirmation when creating a team

commit 025846ff21760519afc0c43f780d2f7bc4d5f79f
Author: David Skeppstedt <david.skeppstedt@gmail.com>
Date:   Wed Jun 20 15:26:19 2018 +0200

    Add delete device endpoint

commit 52c638cd3b375c81ecb534c9433c8e507adb567e
Author: Lili Du <lilidu@Lilis-MacBook-Pro.local>
Date:   Wed Jun 20 15:02:46 2018 +0200

    DOX-194 Delete request shound't have a body

commit 801062559919f126866291e440358c664e225f03
Author: Lili Du <lilidu@Lilis-MacBook-Pro.local>
Date:   Wed Jun 20 14:41:03 2018 +0200

    DOX-194 Changed route to server for adding and deleting device

commit 79c3ac34fa702831c41813ba402161cf176446e5
Author: Lili Du <lilidu@Lilis-

--- a/app/styles/pages/_devices-page.scss
+++ b/app/styles/pages/_devices-page.scss
@@ -5,6 +5,15 @@
     display: flex;
     flex-grow: 1;
     align-items: center;
+    padding: 0.7em 1.3em;
+
+    &:first-child {
+      width: 45%;
+    }
+
+    &:last-child {
+      width: 5%;
+    }
   }
 
   .icon {
@@ -13,6 +22,8 @@
     .material-icons {
       font-size: 20px;
       color: $red;
+      font-weight: bold;
+      cursor: pointer;
     }
   }
 }
